--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,29 +10,6 @@
 	margin: 0 auto;
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-[class*="col-"] {
-  float: left;
-}
-
 @mixin row-center {
 	display: flex;
 	flex-flow: row wrap;
@@ -262,7 +239,7 @@ $primary-font: Verdana, Arial, Times, Courier, Georgia;
 }
 
 html {
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
 	background-color: $black-5;
   background-image: url('../images/parchment.jpg');
   background-size: 1250px 100%;
@@ -477,7 +454,7 @@ summary {
 	justify-content: space-around;
 	align-items: center;
 	height: 61px;
-	width: 390px;
+	width: 400px;
 	padding: 4px;
 	backdrop-filter: blur(8px);
 	-webkit-backdrop-filter: blur(8px);
@@ -812,7 +789,7 @@ summary {
   width: 25vmin;
 	min-width: 110px;
 	max-width: 170px;
-	margin: 5px 8px 5px 0;
+	margin: 5px 8px 4px 0;
 }
 
 /*#endregion Credentials Page*/
@@ -825,8 +802,8 @@ summary {
 
 #pool-pic {
   float: left;
-  width: 390px;
-	margin: 5px 8px 5px 0;
+  width: 395px;
+	margin: 5px 8px 4px 0;
 }
 
 /*#endregion About Page*/
