--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -240,7 +240,7 @@ h1 {
 //Sub Title
 h2 {
   @include pirate-reg;
-	font-size: calc(2.25rem + 2vmin);
+	font-size: calc(1.75rem + 2.5vmin);
 	text-align: center;
 	margin-block-start: 0;
 	margin-block-end: 0;
@@ -399,13 +399,10 @@ summary {
 }
 
 #breakline1 {
-	width: 96%;
-	min-width: 372.5px;
-	max-width: 950px;
-	height: 4.5vw;
+	width: 100%;
 	min-height: 22px;
 	max-height: 45px;
-	margin: .75vmin 0;
+	margin-top: 5px;
 }
 
 /*#endregion Title*/
@@ -417,9 +414,8 @@ summary {
 	flex-flow: row nowrap;
 	justify-content: space-evenly;
 	align-items: center;
-	height: 20px;
 	width: 400px;
-	margin: 10px auto 0px;
+	margin: 15px auto 0;
 }
 
 #home {
@@ -436,12 +432,12 @@ summary {
 	justify-content: space-around;
 	align-items: center;
 	height: 61px;
-	width: 400px;
+  width: 400px;
 	padding: 4px;
+	margin: 0px auto;
+	border-radius: 15px;
 	backdrop-filter: blur(8px);
 	-webkit-backdrop-filter: blur(8px);
-	border-radius: 15px;
-	margin: 0px auto;
 }
 
 #pirate, #coin, #open-chest, #closed-chest, #wheel {
