--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -745,6 +745,22 @@ summary {
   margin: 10px 0;
 }
 
+.iframe-container{
+	position: relative;
+	margin: 10px auto;
+  width: 95%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /*#endregion Projects Page*/
 
 /*#region Credentials Page*/
